--- a/css/new-age.css
+++ b/css/new-age.css
@@ -15,12 +15,12 @@ body {
 }
 
 a {
-  color: #fdcc52;
+  color: #FFD700;
   transition: all .35s;
 }
 
 a:hover, a:focus {
-  color: #fcbd20;
+  color: #F07136;
 }
 
 hr {
@@ -64,14 +64,15 @@ section h2 {
   background-color: white;
   transition: all .35s;
   font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
-  font-weight: 200;
+  font-weight: 400;
   letter-spacing: 1px;
 }
 
 #mainNav .navbar-brand {
-  color: #fdcc52;
+  color: #00b33b;
   font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
-  font-weight: 200;
+  font-size: 30px;
+  font-weight: 500;
   letter-spacing: 1px;
 }
 
@@ -80,20 +81,20 @@ section h2 {
 }
 
 #mainNav .navbar-toggler {
-  font-size: 12px;
+  font-size: 18px;
   padding: 8px 10px;
   color: #222222;
 }
 
 #mainNav .navbar-nav > li > a {
-  font-size: 11px;
+  font-size: 18px;
   font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
   letter-spacing: 2px;
   text-transform: uppercase;
 }
 
 #mainNav .navbar-nav > li > a.active {
-  color: #fdcc52 !important;
+  color: #00b33b !important;
   background-color: transparent;
 }
 
@@ -108,8 +109,20 @@ section h2 {
 
 #mainNav .navbar-nav > li > a:hover,
 #mainNav .navbar-nav > li > a:focus:hover {
-  color: #fdcc52;
+  color: #00b33b;
 }
+
+#envelop .envelope > li > a,
+#envelop .envelope > li > a:focus {
+  color: #00b33b;
+}
+
+#envelop .envelope > li > a:hover,
+#envelop .envelope > li > a:focus:hover {
+  color: #00b33b;
+}
+
+
 
 @media (min-width: 992px) {
   #mainNav {
@@ -156,8 +169,14 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background: url("../img/bg-pattern.png"), #7b4397;
+/*!  background: url("../img/bg-pattern.png"), #7b4397;
   background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+  #C71585
+
+  */
+  background: url("../img/bg-pattern.png"), #FFD700;
+    background: url("../img/bg-pattern.png"), linear-gradient(to left, #00b33b, #FFD700);
+
 }
 
 header.masthead .header-content {
@@ -274,10 +293,19 @@ section.features .feature-item h3 {
 }
 
 section.features .feature-item i {
-  font-size: 80px;
+  font-size: 60px;
   display: block;
   margin-bottom: 15px;
-  background: linear-gradient(to left, #7b4397, #dc2430);
+  background: linear-gradient(to left, #00b33b, #00b33b);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+section.features .feature-item i2 {
+  font-size: 60px;
+  display: block;
+  margin-bottom: 15px;
+  background: linear-gradient(to left, #143e68, #143e68);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -377,7 +405,7 @@ footer {
 }
 
 footer p {
-  font-size: 12px;
+  font-size: 14px;
   margin: 0;
 }
 
@@ -386,7 +414,7 @@ footer ul {
 }
 
 footer ul li a {
-  font-size: 12px;
+  font-size: 14px;
   color: rgba(255, 255, 255, 0.3);
 }
 
@@ -395,8 +423,13 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 .bg-primary {
-  background: #fdcc52;
-  background: linear-gradient(#fdcc52, #fdc539);
+  background: #00b33b;
+  background: linear-gradient(#00b33b, #00b33b);
+}
+
+.bg-primary2 {
+  background: #FFD700;
+  background: linear-gradient(#FFD700, #FFD700);
 }
 
 .text-primary {
@@ -416,7 +449,7 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 
 .btn-outline:hover, .btn-outline:focus, .btn-outline:active, .btn-outline.active {
   color: white;
-  border-color: #fdcc52;
+  border-color: white;
   background-color: #fdcc52;
 }
 
@@ -428,6 +461,6 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 .btn-xl {
-  font-size: 11px;
+  font-size: 14px;
   padding: 15px 45px;
 }
